tests/snapshots/run_wpt_conformance__coreml_split_float16_1D_constant_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
split.https.any.js split float16 1D constant tensor number splits default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([8, 212, 74, 213, 64, 212, 221, 205, 90, 213, 220, 81, 66, 212, 192, 84, 162, 211, 175, 213, 189, 82, 67, 85, 249, 213, 141, 210, 64, 207, 122, 84, 85, 82, 87, 77, 200, 206, 18, 84, 154, 207, 210, 198, 214, 81, 72, 205]);
  }

  nodes {
    [splitOutput1, splitOutput2, splitOutput3] = split(operand_0, axis=0, label="");
  }

  outputs { splitOutput1; splitOutput2; splitOutput3; }
}
