tests/snapshots/run_wpt_conformance__coreml_split_float16_1D_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float16 1D tensor number splits default options",
    "coreml",
    "PASS",
)
